@@ -150,7 +150,7 @@ $langvars['l_sf_sendlog'] = str_replace ("[player]", $playerinfo['character_name
 $langvars['l_sf_sendlog'] = str_replace ("[lost]", $fighterslost, $langvars['l_sf_sendlog']);
 $langvars['l_sf_sendlog'] = str_replace ("[sector]", $sector, $langvars['l_sf_sendlog']);
 
-SectorDefense::message_defense_owner ($db, $sector, $langvars['l_sf_sendlog']);
+BntSectorDefense::message_defense_owner ($db, $sector, $langvars['l_sf_sendlog']);
 PlayerLog::writeLog ($db, $playerinfo['ship_id'], LOG_DEFS_DESTROYED_F, "$fighterslost|$sector");
 $armor_lost = $playerinfo['armor_pts'] - $playerarmor;
 $fighters_lost = $playerinfo['ship_fighters'] - $playerfighters;
@@ -167,7 +167,7 @@ if ($playerarmor < 1)
     PlayerLog::writeLog ($db, $playerinfo['ship_id'], LOG_DEFS_KABOOM, "$sector|$playerinfo[dev_escapepod]");
     $langvars['l_sf_sendlog2'] = str_replace ("[player]", $playerinfo['character_name'], $langvars['l_sf_sendlog2']);
     $langvars['l_sf_sendlog2'] = str_replace ("[sector]", $sector, $langvars['l_sf_sendlog2']);
-    SectorDefense::message_defense_owner ($db, $sector, $langvars['l_sf_sendlog2']);
+    BntSectorDefense::message_defense_owner ($db, $sector, $langvars['l_sf_sendlog2']);
     if ($playerinfo['dev_escapepod'] == 'Y')
     {
         $rating = round ($playerinfo['rating'] / 2);
