@@ -179,10 +179,12 @@ return array(
     'BntScan' => $baseDir . '/classes/BntScan.php',
     'BntSchema' => $baseDir . '/classes/BntSchema.php',
     'BntScore' => $baseDir . '/classes/BntScore.php',
+    'BntSectorDefense' => $baseDir . '/classes/BntSectorDefense.php',
     'BntShip' => $baseDir . '/classes/BntShip.php',
     'BntSmarty' => $baseDir . '/classes/BntSmarty.php',
     'BntTeam' => $baseDir . '/classes/BntTeam.php',
     'BntText' => $baseDir . '/classes/BntText.php',
+    'BntTimer' => $baseDir . '/classes/BntTimer.php',
     'BntToll' => $baseDir . '/classes/BntToll.php',
     'BntTranslate' => $baseDir . '/classes/BntTranslate.php',
     'BntXml' => $baseDir . '/classes/BntXml.php',
@@ -202,7 +204,6 @@ return array(
     'PluginSystem' => $baseDir . '/classes/PluginSystem.php',
     'Rugrat' => $vendorDir . '/adodb/adodb-php/tests/test-active-relationsx.php',
     'SHA1Crypt' => $vendorDir . '/adodb/adodb-php/session/crypt.inc.php',
-    'SectorDefense' => $baseDir . '/classes/SectorDefense.php',
     'SetPaths' => $baseDir . '/classes/SetPaths.php',
     'Smarty' => $vendorDir . '/smarty/smarty/distribution/libs/Smarty.class.php',
     'SmartyBC' => $vendorDir . '/smarty/smarty/distribution/libs/SmartyBC.class.php',
@@ -212,7 +213,6 @@ return array(
     'Template' => $baseDir . '/classes/Template.php',
     'TemplateSystem' => $baseDir . '/classes/TemplateSystem.php',
     'TestXml' => $baseDir . '/classes/TestXml.php',
-    'Timer' => $baseDir . '/classes/Timer.php',
     'adoSchema' => $vendorDir . '/adodb/adodb-php/adodb-xmlschema03.inc.php',
     'adoSchema3' => $vendorDir . '/adoSchema3/adoSchema3.php',
     'adodb_perf' => $vendorDir . '/adodb/adodb-php/adodb-perf.inc.php',
