@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInitab1370dbc083a4a1a79ee8f396724124
+class ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInitab1370dbc083a4a1a79ee8f396724124
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInitab1370dbc083a4a1a79ee8f396724124', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInitab1370dbc083a4a1a79ee8f396724124', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInitc973b6a3651d51ea0c5ea924ff011361', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
